ajustes e mais ajustes

--- a/equipe.html
+++ b/equipe.html
@@ -78,7 +78,7 @@
 								</div>
 								<div class="clearfix"></div>
 								<ol class="breadcrumb">
-									<li><a href="index-3.html">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li class="active">Nossa Equipe</li>
 								</ol>
 								<div class="much">
