--- a/servicos.html
+++ b/servicos.html
@@ -150,7 +150,7 @@
 
 
                     <div class="text-center">
-                        <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
+                        <a href="servicos.html" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
                     </div>
                 </div><!-- end container -->
             </div><!-- end section -->
