--- a/horario.html
+++ b/horario.html
@@ -77,7 +77,7 @@
 								</div>
 								<div class="clearfix"></div>
 								<ol class="breadcrumb">
-									<li><a href="index-3.html">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li class="active">Horário</li>
 								</ol>
 								<div class="much">
