--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
                                     </h2>
 										<p class="lead">Neste Universo onde a beleza é direcionada para a valorização individual. </p>
-										<a href="#" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
+										<a href="horario.html" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
 									</div>
 								</div>
 							</div>
@@ -91,7 +91,7 @@
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
                                     </h2>
 										<p class="lead">Todas as insirações e tendências em cores , quimica e cortes. </p>
-										<a href="#" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
+										<a href="horario.html" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
 									</div>
 								</div>
 							</div>
@@ -102,7 +102,7 @@
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
                                     </h2>
 										<p class="lead">Tudo o que você precisa em um único lugar. </p>
-										<a href="#" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
+										<a href="horario.html" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
 									</div>
 								</div>
 							</div>
@@ -128,7 +128,7 @@
 
                                 <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
 
-                                <a href="#services" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">VER MAIS</a>
+                                <a href="sobre.html" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
                     </div><!-- end row -->
@@ -267,7 +267,9 @@
                                 <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
                             </div><!--widget -->
                         </div><!-- end col -->
-                        <a href="/equipe.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
+                        <div style="text-align: center;">
+                            <a href="/equipe.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
+                        </div>
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
