--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
  
      <!-- Site Metas -->
     <title>Salão de Beleza da July</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="Salão, July, Beleza, Benguela, Calombutão">
+    <meta name="description" content="Salão de Beleza da July, tudo o que você merece para turbinar a sua aparência em um uníco lugar.">
+    <meta name="author" content="Francisco Fetapi">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="/images/apple-touch-icon.png" type="image/x-icon" />
