ajustes e mais ajustes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div><!-- end section -->
 
             <section class="section nopad cac text-center">
-                <a href="#"><h3>Você está interessado no trabalho incrivel da nossa equipa? Clique aqui</h3></a>
+                <a href="horario.html"><h3>Você está interessado no trabalho incrivel da nossa equipa? Clique aqui</h3></a>
             </section>
 
             <div class="section wb bg-body">
