--- a/sobre.html
+++ b/sobre.html
@@ -101,7 +101,7 @@
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
                                 <h4>História Única</h4>
-                                <h2>Como chegamos até aqui?</h2>
+                                <h2 class="titulo-destaque">Como <b>chegamos</b> até aqui?</h2>
                                 <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
 
                                 <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
@@ -114,6 +114,10 @@
                     <div class="row">
 						<div class="col-md-12">
 							<div class="about-tab">
+                                <div class="message-box text-center">
+                                    <h4>Conheça-nos melhor</h4>
+                                    <h2 class="titulo-destaque">Missão, Valores e Objetivos</h2>
+                                </div><!-- end messagebox -->
 								<ul class="nav nav-tabs">
 									<li class="active"><a href="#tab_a" data-toggle="tab">Missão</a></li>
 									<li><a href="#tab_b" data-toggle="tab">Valores</a></li>
