Adicionado algun servicos

--- a/servicos.html
+++ b/servicos.html
@@ -110,19 +110,22 @@
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_01.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>Nome do Serviço</h4>
+                                <h4>Escama</h4>
+                                <p class="lead">2 000 KZ</p>
                                 <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_02.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>Nome do Serviço</h4>
+                                <h4>Uma-Uma Simples</h4>
+                                <p class="lead">2 500 KZ</p>
                                 <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap lastchild clearfix">
                                 <img src="uploads/barber_service_03.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>Nome do Serviço</h4>
+                                <h4>Maliamol</h4>
+                                <p class="lead">2 500 KZ</p>
                                 <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
                         </div><!-- end col -->
@@ -130,22 +133,33 @@
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_04.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>Nome do Serviço</h4>
+                                <h4>Americano</h4>
+                                <p class="lead">2 500 KZ</p>
                                 <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap clearfix">
                                 <img src="uploads/barber_service_05.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>Nome do Serviço</h4>
+                                <h4>Caracol Grosso</h4>
+                                <p class="lead">2 000 KZ</p>
                                 <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
 
                             <div class="service-wrap lastchild clearfix">
                                 <img src="uploads/barber_service_06.jpg" alt="" class="img-responsive img-rounded alignleft">
-                                <h4>Nome do Serviço</h4>
+                                <h4>Caracol Fino</h4>
+                                <p class="lead">3 000 KZ</p>
                                 <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
                             </div><!-- end issue -->
                         </div><!-- end col -->
+                        <div class="col-xs-12">
+                            <div class="service-wrap lastchild clearfix">
+                                <img src="uploads/barber_service_06.jpg" alt="" class="img-responsive img-rounded alignleft">
+                                <h4>Dred-Lucke Compl</h4>
+                                <p class="lead">3 000 KZ</p>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
+                            </div><!-- end issue -->
+                        </div>
                     </div>
 
 
