estilo das tabs melhorada em todas as pagins

--- a/sobre.html
+++ b/sobre.html
@@ -118,7 +118,8 @@
                                     <h4>Conheça-nos melhor</h4>
                                     <h2 class="titulo-destaque">Missão, Valores e Objetivos</h2>
                                 </div><!-- end messagebox -->
-								<ul class="nav nav-tabs">
+                                <br />
+								<ul class="nav nav-tabs nav-justified">
 									<li class="active"><a href="#tab_a" data-toggle="tab">Missão</a></li>
 									<li><a href="#tab_b" data-toggle="tab">Valores</a></li>
 									<li><a href="#tab_c" data-toggle="tab">Objetivos</a></li>								
