--- a/servicos.html
+++ b/servicos.html
@@ -264,9 +264,7 @@
                         </div>
                     </div>
                     </div>
-
-                    
-
+                    <!-- END TAB SECTION -->
                     <div class="text-center">
                         <a href="servicos.html" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
                     </div>
