--- a/servicos.html
+++ b/servicos.html
@@ -106,12 +106,27 @@
                         </div>
                     </div><!-- end title -->
 
-                    <ul class="nav nav-tabs nav-justified">
-                        <li class="active"><a href="#tab_a" data-toggle="tab">Tranças</a></li>
-                        <li><a href="#tab_b" data-toggle="tab">Pintura Do Cabelo</a></li>
-                        <li><a href="#tab_c" data-toggle="tab">Barbearia</a></li>								
-                        <li><a href="#tab_d" data-toggle="tab">Manicury/Pedicury</a></li>								
-                    </ul>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="section-title row text-center msg-1" style="zoom: .8;">
+                                <div class="col-md-8 col-md-offset-2">
+                                <h3>CATEGORIA DE SERVIÇOS</h3>
+                                <hr class="grd1">
+                                <p class="lead">Clique num dos itens do menú para ver a lista de serviços da tal categoria.</p>
+                                <!-- <span class="fa fa-arrow-right d-none d-md-block"></span>
+                                <span class="fa fa-arrow-down d-md-none"></span> -->
+                                </div>
+                            </div><!-- end title -->
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="nav nav-tabs nav-stacked lista-servicos">
+                                <li class="active"><a href="#tab_a" data-toggle="tab">Tranças</a></li>
+                                <li><a href="#tab_b" data-toggle="tab">Pintura Do Cabelo</a></li>
+                                <li><a href="#tab_c" data-toggle="tab">Barbearia</a></li>								
+                                <li><a href="#tab_d" data-toggle="tab">Manicury/Pedicury</a></li>								
+                            </ul>
+                        </div>
+                    </div>
 
                     <div class="tab-content">
                         <!-- START TAB SECION -->
