--- a/servicos.html
+++ b/servicos.html
@@ -124,11 +124,15 @@
                                 <li><a href="#tab_b" data-toggle="tab">Pintura Do Cabelo</a></li>
                                 <li><a href="#tab_c" data-toggle="tab">Barbearia</a></li>								
                                 <li><a href="#tab_d" data-toggle="tab">Manicury/Pedicury</a></li>								
+                                <li><a href="#tab_e" data-toggle="tab">Mise</a></li>								
+                                <li><a href="#tab_f" data-toggle="tab">Desfiliso</a></li>								
+                                <li><a href="#tab_g" data-toggle="tab">Puxinhos/Penteados</a></li>								
+                                <li><a href="#tab_h" data-toggle="tab">Aplicações</a></li>								
                             </ul>
                         </div>
                     </div>
 
-                    <div class="tab-content">
+                    <div class="tab-content servicos-tab">
                         <!-- START TAB SECION -->
                         <div class="row tab-pane fade in active" id="tab_a">
                             <div class="col-md-6">
@@ -186,7 +190,6 @@
                             </div>
                         </div>
                     <!-- END TAB SECTION -->
-                    <!-- START TAB SECION -->
                     <div class="row tab-pane fade" id="tab_b">
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
@@ -215,7 +218,6 @@
                         </div>
                     </div>
                     <!-- END TAB SECTION -->
-                    <!-- START TAB SECION -->
                     <div class="row tab-pane fade" id="tab_c">
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
@@ -243,7 +245,6 @@
                         </div>
                     </div>
                     <!-- END TAB SECTION -->
-                    <!-- START TAB SECION -->
                     <div class="row tab-pane fade" id="tab_d">
                         <div class="col-md-6">
                             <div class="service-wrap clearfix">
@@ -278,8 +279,32 @@
                             </div><!-- end issue -->
                         </div>
                     </div>
+                    <!-- END TAB SECTION -->
+                    <div class="row tab-pane fade" id="tab_e">
+                        <div class="col-md-6">
+                            <div class="service-wrap clearfix">
+                                <img src="uploads/barber_service_01.jpg" alt="" class="img-responsive img-rounded alignleft">
+                                <h4>Aplicação - Mão</h4>
+                                <p class="lead">1 000 KZ</p>
+                                <p>Algum texto descrevendo este serviço, exaltando as especificações técnicas e de estilos de modo a atrair o cliente.</p>
+                            </div><!-- end issue -->
+                        </div><!-- end col -->
                     </div>
                     <!-- END TAB SECTION -->
+                    <div class="row tab-pane fade" id="tab_f">
+                        <h1>Ola Mundo 2</h1>
+                    </div>
+                    <!-- END TAB SECTION -->
+                    <div class="row tab-pane fade" id="tab_g">
+                        <h1>Ola Mundo 3</h1>
+                    </div>
+                    <!-- END TAB SECTION -->
+                    <div class="row tab-pane fade" id="tab_h">
+                        <h1>Ola Mundo 4</h1>
+                    </div>
+                    <!-- END TAB SECTION -->
+                    </div>
+                    
                     <div class="text-center">
                         <a href="servicos.html" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
                     </div>
@@ -342,6 +367,11 @@
             callback: function ( anchor, toggle ) {} // Function to run after scrolling
         });
     })(jQuery);
+    </script>
+
+    <script>
+
+
     </script>
 
 </body>
