servicos.js criado e modelado

--- a/servicos.html
+++ b/servicos.html
@@ -369,10 +369,7 @@
     })(jQuery);
     </script>
 
-    <script>
-
-
-    </script>
+    <script src="./js/servicos.js"></script>
 
 </body>
 </html>
