--- a/horario.html
+++ b/horario.html
@@ -194,22 +194,32 @@
             </div>
             <div class="contact">
             <div class="info">
+                
                 <div class="address">
+                    <a href="#">
                   <i class="fa fa-globe"></i>
                   <h4>Localização</h4>
                   <p>Benguela, Benguela, Bairro do Calombutão</p>
+                </a>
                 </div>
   
                 <div class="email">
+                    <a href="mailto:emaildosalao@gmail.com">
                   <i class="fa fa-envelope"></i>
                   <h4>Email</h4>
-                  <p>emaildosalao@gmail.com</p>
+                  <p>
+                        emaildosalao@gmail.com
+                  </p>
+                </a>
                 </div>
   
                 <div class="phone">
+                    <a href="tel:+244-947-911-646">
                   <i class="fa fa-phone"></i>
                   <h4>Telefone</h4>
-                  <p>+244 911 111 111</p>
+                  <p>
+                      +244 947 911 646</p>
+                    </a>
                 </div>
   
               </div>
