--- a/horario.html
+++ b/horario.html
@@ -101,11 +101,14 @@
                         <small>HORÁRIO CONSISTENTE</small>
                         <h3 class="titulo-destaque">Disponiveis de <i>Segunda</i> à <i>Sabádo</i></h3>
                         <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                        <p class="lead">O Salão de beleza da July está aberto nos dias da semana desde o periodo da manhã até o periodo da tarde, para mais detalhes confira o horário abaixo.</p>
+                        <a href="#section-horario" data-scroll>
+                            <span class="fa fa-arrow-down arrow-down-animate"></span>
+                        </a>
                         </div>
                     </div><!-- end title -->
 
-                    <div class="row">
+                    <div class="row" id="section-horario">
 						<div class="col-md-6">
 							<div class="appointment-left">
 								<h2>Horário</h2>
