Mensagem intodutoria inserida em certas paginas 1

--- a/servicos.html
+++ b/servicos.html
@@ -132,7 +132,7 @@
                     </div>
                     
                     <div class="text-center">
-                        <a href="horario.html" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
+                        <a href="horario.html" class="btn btn-light btn-radius btn-brd grd1 effect-1">AGENDAR AGORA</a>
                     </div>
                 </div><!-- end container -->
             </div><!-- end section -->
