--- a/equipe.html
+++ b/equipe.html
@@ -102,11 +102,14 @@
                         <small>CONHEÇA A NOSSA EQUIPE</small>
                         <h3>NOSSA EQUIPE</h3>
                         <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                        <p class="lead">O Salão de Beleza da July está recheado de profissionais bem capacitados e com anos de experiência no mercado. Veja cada um deles na seção abaixo.</p>
+                        <a href="#section-equipe" data-scroll>
+                            <span class="fa fa-arrow-down arrow-down-animate"></span>
+                        </a>
                         </div>
                     </div><!-- end title -->
 
-                    <div class="row dev-list text-center">
+                    <div class="row dev-list text-center" id="section-equipe">
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <div class="widget clearfix">
 								<div class="hover-br">
