--- a/servicos.html
+++ b/servicos.html
@@ -102,27 +102,28 @@
                         <small>LISTA DE SERVIÇOS</small>
                         <h3>NOSSOS SERVIÇOS</h3>
                         <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                        <p class="lead">O Salão de Beleza da July oferece diversos serviços estéticos, abaixo temos uma listagem dos seus serviços agrupados em suas respetivas categorias.</p>
                         </div>
                     </div><!-- end title -->
 
                     <div class="row">
                         <div class="col-md-6">
                             <div class="section-title row text-center msg-1" style="zoom: .8;">
-                                <div class="col-md-8 col-md-offset-2">
+                                <div class="col-md-12">
                                 <h3>CATEGORIA DE SERVIÇOS</h3>
                                 <hr class="grd1">
-                                <p class="lead">Clique num dos itens do menú para ver a lista de serviços da tal categoria.</p>
-                                <!-- <span class="fa fa-arrow-right d-none d-md-block"></span>
-                                <span class="fa fa-arrow-down d-md-none"></span> -->
+                                <p class="lead">Clique numa das categorias para ver a lista de serviços relacionada.</p>
+                                <br />
+                                <a href="#tabs-categorias" data-scroll>
+                                <span class="fa fa-arrow-down d-none d-md-block arrow-down-animate"></span>
+                            </a>
+                                <span class="fa fa-arrow-right d-md-none arrow-down-animate arrow-down-animate2"></span>
                                 </div>
                             </div><!-- end title -->
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" id="tabs-categorias">
                             <ul class="nav nav-tabs nav-stacked lista-servicos">
-                                <li class="active"><a href="#tab_1" data-toggle="tab">Tranças</a></li>
-                                <li><a href="#tab_2" data-toggle="tab">Pintura Do Cabelo</a></li>
-                                
+                                <!-- AQUI IRAO APARECER AS TABS -->
                             </ul>
                         </div>
                     </div>
