--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <small>CONHEÇA A NOSSA EQUIPE</small>
                         <h3>NOSSA EQUIPE</h3>
                         <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                        <p class="lead">O Salão de Beleza da July está recheado de profissionais bem capacitados e com anos de experiência no mercado. Para ver a listagem completa dos nosso profissionais clique no botão logo após a listagem.</p>
                         </div>
                     </div><!-- end title -->
 
