ajustes e mais ajustes

--- a/equipe.html
+++ b/equipe.html
@@ -91,7 +91,7 @@
 				</div>
 			</div><!-- end all-page-bar -->
 
-            <section class="section nopad cac text-center">
+            <section class="section nopad cac text-center d-none d-xl-block">
                 <a href="#"><h3>Equipe composta por profissionais altamente qualificados.</h3></a>
             </section>
 
