--- a/horario.html
+++ b/horario.html
@@ -90,7 +90,7 @@
 				</div>
 			</div><!-- end all-page-bar -->
 
-            <section class="section nopad cac text-center">
+            <section class="section nopad cac text-center d-none d-xl-block">
                 <a href="#"><h3>Saiba de antemão os momentos do dia em que abrimos e fechamos o Salão.</h3></a>
             </section>
 
