--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								</div>
 							</div>
 							<div class="text-center item">
-								<div class="col-md-8 col-md-offset-2 col-sm-12">
+								<div class="banner-slider-home">
 									<div class="big-tagline text-center">
 										<h2 class="p-0" style="text-transform: none;"><strong style="font-size:52px;">Serviço completo</strong>
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
@@ -113,7 +113,7 @@
                 </div><!-- end container -->
             </div><!-- end section -->
 
-            <section class="section nopad cac text-center">
+            <section class="section nopad cac text-center d-none d-xl-block">
                 <a href="horario.html"><h3>Você está interessado no trabalho incrivel da nossa equipa? Clique aqui</h3></a>
             </section>
 
