--- a/sobre.html
+++ b/sobre.html
@@ -91,7 +91,7 @@
 				</div>
 			</div><!-- end all-page-bar -->
 
-            <section class="section nopad cac text-center">
+            <section class="section nopad cac text-center d-none d-xl-block">
                 <a href="#"><h3 style="font-size: 18px;">Conheça mais sobre o historial, motivações e objetivos da <b>July Otchacati - Salão de Beleza Estético</b></h3></a>
             </section>
 
