ajustes e mais ajustes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="row">
 						<div id="full-width" class="owl-carousel owl-theme">
 							<div class="text-center item">
-								<div class="col-md-8 col-md-offset-2 col-sm-12">
+								<div class="banner-slider-home">
 									<div class="big-tagline text-center">
 										<h2 class="p-0" style="text-transform: none;"><strong style="font-size:52px;">Junte-se a nós</strong>
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
@@ -85,7 +85,7 @@
 								</div>
 							</div>
 							<div class="text-center item">
-								<div class="col-md-8 col-md-offset-2 col-sm-12">
+								<div class="banner-slider-home">
 									<div class="big-tagline text-center">
 										<h2 class="p-0" style="text-transform: none;"><strong style="font-size:52px;">Corte de cabelo</strong>
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
