adicionar icone ver tamanho completo em equipe

--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/func0.jpg" alt="" class="img-responsive">
+                                    <div class="post-media wow fadeIn">
+                                        <a href="/images/func0.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                        <img src="/images/func0.jpg" alt="" class="img-responsive">
+                                    </div>
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -229,7 +232,10 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/func1.jpg" alt="" class="img-responsive">
+									<div class="post-media wow fadeIn">
+                                        <a href="/images/func1.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                        <img src="/images/func1.jpg" alt="" class="img-responsive">
+                                    </div>
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
@@ -250,7 +256,10 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="widget clearfix">
 								<div class="hover-br">
-									<img src="/images/func2.jpg" alt="" class="img-responsive">
+									<div class="post-media wow fadeIn">
+                                        <a href="/images/func2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                        <img src="/images/func2.jpg" alt="" class="img-responsive">
+                                    </div>
 									<div class="social-up-hover">
 										<div class="footer-social">
 											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
