adicionar icone ver tamanho completo em EQUIPE

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="col-md-4 col-sm-6 col-xs-12">
                            <div class="service-widget">
                                 <div class="post-media wow fadeIn">
-                                    <a href="/images/demo2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                    <a href="/images/demo2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
                                     <img src="/images/demo2.jpg" alt="" class="img-responsive img-rounded">
                                 </div>
                                 <h3>Trabalho 1</h3>
@@ -171,7 +171,7 @@
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="service-widget">
                                 <div class="post-media wow fadeIn">
-                                    <a href="/images/demo4.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                    <a href="/images/demo4.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
                                     <img src="/images/demo4.jpg" alt="" class="img-responsive img-rounded">
                                 </div>
                                 <h3>Trabalho 2</h3>
@@ -182,7 +182,7 @@
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="service-widget">
                                 <div class="post-media wow fadeIn">
-                                    <a href="/images/demo3.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                    <a href="/images/demo3.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
                                     <img src="/images/demo3.jpg" alt="" class="img-responsive img-rounded">
                                 </div>
                                 <h3>Trabalho 3</h3>
@@ -209,7 +209,7 @@
                             <div class="widget clearfix">
 								<div class="hover-br">
                                     <div class="post-media wow fadeIn">
-                                        <a href="/images/func0.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                        <a href="/images/func0.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
                                         <img src="/images/func0.jpg" alt="" class="img-responsive">
                                     </div>
 									<div class="social-up-hover">
@@ -233,7 +233,7 @@
                             <div class="widget clearfix">
 								<div class="hover-br">
 									<div class="post-media wow fadeIn">
-                                        <a href="/images/func1.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                        <a href="/images/func1.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
                                         <img src="/images/func1.jpg" alt="" class="img-responsive">
                                     </div>
 									<div class="social-up-hover">
@@ -257,7 +257,7 @@
                             <div class="widget clearfix">
 								<div class="hover-br">
 									<div class="post-media wow fadeIn">
-                                        <a href="/images/func2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+                                        <a href="/images/func2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
                                         <img src="/images/func2.jpg" alt="" class="img-responsive">
                                     </div>
 									<div class="social-up-hover">
