tornado a insercao de funcionario dinamica pelo JS

--- a/equipe.html
+++ b/equipe.html
@@ -110,148 +110,8 @@
                     </div><!-- end title -->
 
                     <div class="row dev-list text-center" id="section-equipe">
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func0.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Juliana Luiz</h3>
-                                    <small>A Fundadora</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func1.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Mateus Hamuyela</h3>
-                                    <small>Barbeiro</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func2.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Afonso Dumbo</h3>
-                                    <small>Chefe de comunição e Marketing</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func3.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Eduarda Maliti</h3>
-                                    <small>Manicurista e Pedicurista</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func4.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Ana Pena</h3>
-                                    <small>Cabelereira</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func5.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Maria Luíz</h3>
-                                    <small>Cabelereira</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<img src="/images/func6.jpg" alt="" class="img-responsive">
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Vanusa dos Santos</h3>
-                                    <small>Maquilhadora</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
+                        <!-- AQUI FICARA A LISTA DE FUNCIONARIOS -->
+                        
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
@@ -314,7 +174,7 @@
     })(jQuery);
     </script>
 
-    <script src="/js/equipe.js"></script>
-
+<!-- MY CUSTOM SCRIPT -->
+<script src="/js/equipe.js"></script>
 </body>
 </html>
