--- a/index.html
+++ b/index.html
@@ -205,77 +205,7 @@
                     </div><!-- end title -->
 
                     <div class="row dev-list text-center">
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-                                    <div class="post-media wow fadeIn">
-                                        <a href="/images/func0.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
-                                        <img src="/images/func0.jpg" alt="" class="img-responsive">
-                                    </div>
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Juliana Luiz</h3>
-                                    <small>A Fundadora</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<div class="post-media wow fadeIn">
-                                        <a href="/images/func1.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
-                                        <img src="/images/func1.jpg" alt="" class="img-responsive">
-                                    </div>
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Mateus Hamuyela</h3>
-                                    <small>Barbeiro</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
-
-                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                            <div class="widget clearfix">
-								<div class="hover-br">
-									<div class="post-media wow fadeIn">
-                                        <a href="/images/func2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
-                                        <img src="/images/func2.jpg" alt="" class="img-responsive">
-                                    </div>
-									<div class="social-up-hover">
-										<div class="footer-social">
-											<a href="#" class="btn grd1"><i class="fa fa-facebook"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-google"></i></a>
-											<a href="#" class="btn grd1"><i class="fa fa-whatsapp"></i></a>
-										</div>
-									</div>
-								</div>
-                                <div class="widget-title">
-                                    <h3>Afonso Dumbo</h3>
-                                    <small>Chefe de comunição e Marketing</small>
-                                </div>
-                                <!-- end title -->
-                                <p>Uma mensagem que a pessoa queira passar, uma breve descrição sobre ela mesma ou mesmo uma observação sobre suas competencias técnicas.</p>
-                            </div><!--widget -->
-                        </div><!-- end col -->
+                      <!-- AQUI ESTARA UMA LISTA DE FUNCIONARIOS -->
                         <div style="text-align: center;">
                             <a href="/equipe.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                         </div>
@@ -387,6 +317,7 @@
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
+    <script src="js/equipe.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
