adicionado alguns scripts para popular a pagina de conteudo via JavaScript

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div><!-- end section -->
 
             <section class="section nopad cac text-center d-none d-xl-block">
-                <a href="horario.html"><h3>Você está interessado no trabalho incrivel da nossa equipa? Clique aqui</h3></a>
+                <a href="horario.html"><h3>Você está interessado no trabalho incrivel da nossa equipe? Clique aqui</h3></a>
             </section>
 
             <div class="section wb bg-body">
@@ -151,44 +151,14 @@
 					
                     <hr class="hr1"> 
 
-                    <div class="row text-center">
+                    <div class="row text-center lista-demonstracao">
                         <div class="section-title">
                             <small>VEJA OS NOSSOS TRABALHOS ANTERIORES</small>
                             <h3>TRABALHOS REALIZADOS</h3>
                             <hr class="grd1">
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                           <div class="service-widget">
-                                <div class="post-media wow fadeIn">
-                                    <a href="/images/demo2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
-                                    <img src="/images/demo2.jpg" alt="" class="img-responsive img-rounded">
-                                </div>
-                                <h3>Trabalho 1</h3>
-                                <p>Aliquam sagittis ligula et sem lacinia, ut facilisis enim sollicitudin. Proin nisi est, convallis nec purus vitae, iaculis posuere sapien. Cum sociis natoque.</p>
-                            </div><!-- end service -->
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="service-widget">
-                                <div class="post-media wow fadeIn">
-                                    <a href="/images/demo4.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
-                                    <img src="/images/demo4.jpg" alt="" class="img-responsive img-rounded">
-                                </div>
-                                <h3>Trabalho 2</h3>
-                                <p>Duis at tellus at dui tincidunt scelerisque nec sed felis. Suspendisse id dolor sed leo rutrum euismod. Nullam vestibulum fermentum erat. It nam auctor. </p>
-                            </div><!-- end service -->
-                        </div>
-
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="service-widget">
-                                <div class="post-media wow fadeIn">
-                                    <a href="/images/demo3.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="fa fa-eye"></i></a>
-                                    <img src="/images/demo3.jpg" alt="" class="img-responsive img-rounded">
-                                </div>
-                                <h3>Trabalho 3</h3>
-                                <p>Etiam materials ut mollis tellus, vel posuere nulla. Etiam sit amet lacus vitae massa sodales aliquam at eget quam. Integer ultricies et magna quis posuere.</p>
-                            </div><!-- end service -->
-                        </div>
+                       
+                        <!-- AQUI VAI APARECER A LISTA DE DEMONSTRACAO -->
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
@@ -318,6 +288,7 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/equipe.js"></script>
+    <script src="js/demonstracao.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
