--- a/servicos.html
+++ b/servicos.html
@@ -110,9 +110,9 @@
                         <div class="col-md-6">
                             <div class="section-title row text-center msg-1" style="zoom: .8;">
                                 <div class="col-md-12">
-                                <h3>CATEGORIA DE SERVIÇOS</h3>
+                                <h3>SERVIÇOS POR CATEGORIA</h3>
                                 <hr class="grd1">
-                                <p class="lead">Clique numa das categorias para ver a lista de serviços relacionada.</p>
+                                <p class="lead">Clique numa das categorias para ver a lista de serviços a ela relacionada.</p>
                                 <br />
                                 <a href="#tabs-categorias" data-scroll>
                                 <span class="fa fa-arrow-down d-none d-md-block arrow-down-animate"></span>
