--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <small>DECLARAÇÃO DE CLIENTES</small>
                         <h3>RECOMENDAÇÕES</h3>
                         <hr class="grd1">
-                        <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                        <p class="lead">Veja o que outras pessoas estam falando do Salão de Beleza da July.</p>
                         </div>
                     </div><!-- end title -->
 
